bring api inline with upcoming PR
